--- a/src/assets/css/paper-kit.css
+++ b/src/assets/css/paper-kit.css
@@ -22,6 +22,12 @@
  * Copyright 2012-2013 Mattia Larentis
  * http://www.apache.org/licenses/LICENSE-2.0
  */
+
+.pixel {
+  border-radius: 50%;
+  width:100px;
+}
+
 .bootstrap-switch {
   display: inline-block;
   direction: ltr;
